Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-config.adoc.po
@@ -2429,7 +2429,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-all-config.adoc:8175
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-all-config.adoc:72
@@ -34913,7 +34913,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-all-config.adoc:22799
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-all-config.adoc:22768
