--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-reactive-mysql-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-reactive-mysql-client.adoc.po
@@ -99,7 +99,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-reactive-mysql-client.adoc:71
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-reactive-mysql-client.adoc:41
