--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http.adoc.po
@@ -589,7 +589,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http.adoc:252
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http.adoc:257
