--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-agroal.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-agroal.adoc.po
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-agroal.adoc:213
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-agroal.adoc:44
