--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-datasource-reactive-mysql-data-source-reactive-my-sql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-datasource-reactive-mysql-data-source-reactive-my-sql-config.adoc.po
@@ -93,4 +93,4 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-datasource-reactive-mysql-data-source-reactive-my-sql-config.adoc:38
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
