--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
@@ -2448,7 +2448,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-config.adoc:8229
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-config.adoc:72
@@ -35306,7 +35306,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-config.adoc:23045
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-config.adoc:23014
