--- a/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http.adoc.po
@@ -684,7 +684,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-vertx-http.adoc:297
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-vertx-http.adoc:302
