--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-http-http-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-http-http-configuration.adoc.po
@@ -273,7 +273,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-http-http-configuration.adoc:83
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-http-http-configuration.adoc:88
