--- a/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
@@ -601,7 +601,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:230
 #, no-wrap
 msgid "Query parameter"
-msgstr ""
+msgstr "クエリーパラメーター"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:231
