--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc.po
@@ -112,7 +112,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:39
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:44
