--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc.po
@@ -111,7 +111,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc:76
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-agroal-config-group-data-source-jdbc-build-time-config.adoc:44
