--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-http-http-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-http-http-configuration.adoc.po
@@ -268,7 +268,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-http-http-configuration.adoc:83
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-http-http-configuration.adoc:88
