--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-reactive-mysql-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-reactive-mysql-client.adoc.po
@@ -93,4 +93,4 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-reactive-mysql-client.adoc:38
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
