--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http.adoc.po
@@ -544,7 +544,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http.adoc:220
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http.adoc:225
