--- a/l10n/po/ja_JP/_generated-config/config/quarkus-agroal-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-agroal-general-config-items.adoc.po
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-agroal-general-config-items.adoc:222
 #, no-wrap
 msgid "`enabled`"
-msgstr ""
+msgstr "`enabled`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-agroal-general-config-items.adoc:44
