--- a/l10n/po/ja_JP/_generated-config/config/quarkus-datasource-data-sources-reactive-my-sql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-datasource-data-sources-reactive-my-sql-config.adoc.po
@@ -99,7 +99,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-datasource-data-sources-reactive-my-sql-config.adoc:71
 #, no-wrap
 msgid "`disabled`"
-msgstr ""
+msgstr "`disabled`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-datasource-data-sources-reactive-my-sql-config.adoc:41
