Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-live-reload-live-reload-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-live-reload-live-reload-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:06+0000\n"
+"POT-Creation-Date: 2021-04-07 19:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Whether or not Quarkus should disable it's ability to not do a full restart when changes to classes are compatible with JVM instrumentation. If this is set to false, Quarkus will always restart on changes and never perform class redefinition.\n"
+"Whether or not Quarkus should enable its ability to not do a full restart when changes to classes are compatible with JVM instrumentation. If this is set to true, Quarkus will perform class redefinition when possible.\n"
 "--"
 msgstr ""
 
@@ -60,7 +60,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-live-reload-live-reload-config.adoc:20
 #, no-wrap
-msgid "`true`"
+msgid "`false`"
 msgstr ""
 
 #. type: Table
