--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-rest-client-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:07+0000\n"
+"POT-Creation-Date: 2021-04-07 19:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/latest/config/quarkus-rest-client-reactive.adoc:16
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-rest-client-reactive_quarkus.rest-client.scope]]`link:#quarkus-rest-client-reactive_quarkus.rest-client.scope[quarkus.rest-client.scope]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-rest-client-reactive_quarkus.rest-client-reactive.scope]]`link:#quarkus-rest-client-reactive_quarkus.rest-client-reactive.scope[quarkus.rest-client-reactive.scope]`\n"
 "\n"
 "[.description]\n"
 "--\n"
