--- a/l10n/po/ja_JP/_guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 14:05+0000\n"
+"POT-Creation-Date: 2021-04-07 19:11+0000\n"
 "PO-Revision-Date: 2021-03-04 07:07+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -211,7 +211,9 @@ msgstr "依存関係の中に設定ファイルの埋め込み"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:93
-msgid "You can embed a configuration file inside one of your dependencies by adding a `META-INF/microprofile.properties` configuration file to it (this is a standard functionality of MicroProfile Config)."
+#, fuzzy
+#| msgid "You can embed a configuration file inside one of your dependencies by adding a `META-INF/microprofile.properties` configuration file to it (this is a standard functionality of MicroProfile Config)."
+msgid "You can embed a configuration file inside one of your dependencies by adding a `META-INF/microprofile-config.properties` configuration file to it (this is a standard functionality of MicroProfile Config)."
 msgstr "`META-INF/microprofile.properties` 設定ファイルを追加することで、依存関係の中に設定ファイルを埋め込むことができます (これは MicroProfile Config の標準機能です)。"
 
 #. type: Plain text
