--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 14:04+0000\n"
+"POT-Creation-Date: 2021-04-07 19:11+0000\n"
 "PO-Revision-Date: 2021-03-28 11:49+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -695,11 +695,26 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:435
+msgid "Ensure the following dependency is present in your `pom.xml` file if you require the Microprofile Metrics API:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/micrometer.adoc:442
+#, no-wrap
+msgid ""
+"<dependency>\n"
+"  <groupId>org.eclipse.microprofile.metrics</groupId>\n"
+"  <artifactId>microprofile-metrics-api</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/micrometer.adoc:445
 msgid "The MP Metrics API compatibility layer will be moved to a different extension in the future."
 msgstr "MP Metrics API互換性レイヤは、将来的には別のエクステンションに移される予定です。"
 
 #. type: Title ==
-#: upstream/_guides/micrometer.adoc:436
+#: upstream/_guides/micrometer.adoc:446
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
