--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 14:05+0000\n"
+"POT-Creation-Date: 2021-04-07 19:11+0000\n"
 "PO-Revision-Date: 2021-04-03 11:02+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1184,7 +1184,7 @@ msgstr "Google Cloud"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:523
 #, fuzzy
-msgid "You can have Quarkus OIDC `web-app` applications access **Google Cloud services** such as **BigQuery** on behalf of the currently authenticated users who have enabled OpendId Connect (Authorization Code Flow) permissions to such services in their Google Developer Consoles."
+msgid "You can have Quarkus OIDC `web-app` applications access **Google Cloud services** such as **BigQuery** on behalf of the currently authenticated users who have enabled OpenID Connect (Authorization Code Flow) permissions to such services in their Google Developer Consoles."
 msgstr "Quarkus OIDC `web-app` アプリケーションは、Google Developer Consolesで *BigQuery* などのサービスに対するOpendId Connect(Authorization Code Flow)パーミッションを有効にしている現在認証されたユーザーに代わって、 *BigQuery* などの *Google Cloudサービスに* アクセスすることができます。"
 
 #. type: Plain text
