--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:13+0000\n"
+"POT-Creation-Date: 2021-04-07 19:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,6 +55,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:17
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:26
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:35
+#: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:44
 #, no-wrap
 msgid "boolean"
 msgstr ""
@@ -79,13 +80,26 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:29
-#: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:37
+#: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:38
+#: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:46
 #, no-wrap
 msgid "`false`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:34
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.tracing.enabled]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.tracing.enabled[quarkus.mongodb.tracing.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether or not tracing spans of driver commands are sent in case the smallrye-opentracing extension is present.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:43
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.force-default-clients]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.force-default-clients[quarkus.mongodb.force-default-clients]`\n"
