--- a/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
+++ b/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-31 13:11+0000\n"
+"POT-Creation-Date: 2021-04-07 19:11+0000\n"
 "PO-Revision-Date: 2021-03-30 23:50+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -531,8 +531,9 @@ msgstr "アプリケーションを起動すると、EFK内にログが到着し
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:310
-#, no-wrap
-msgid "Fluentd alternative: use Syslog"
+#, fuzzy, no-wrap
+#| msgid "Fluentd alternative: use Syslog"
+msgid "GELF alternative: use Syslog"
 msgstr "Fluentdの代替:Syslogの使用"
 
 #. type: Plain text
