Apply translation memory

--- a/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
@@ -77,7 +77,7 @@ msgstr ""
 #: upstream/_guides/dev-mode-differences.adoc:31
 #, no-wrap
 msgid "Live reload"
-msgstr ""
+msgstr "ライブ・リロード"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:34
@@ -88,7 +88,7 @@ msgstr ""
 #: upstream/_guides/dev-mode-differences.adoc:35
 #, no-wrap
 msgid "Dev UI"
-msgstr ""
+msgstr "Dev UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:40
@@ -157,7 +157,7 @@ msgstr ""
 #: upstream/_guides/dev-mode-differences.adoc:60
 #, no-wrap
 msgid "Swagger UI"
-msgstr ""
+msgstr "Swagger UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:63
