Add machine translation

--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -2251,7 +2251,7 @@ msgstr "*group.id*"
 
 #. type: Table
 #: upstream/_guides/kafka.adoc:926
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "A unique string that identifies the consumer group the application belongs to.\n"
 "\n"
@@ -2261,7 +2261,7 @@ msgid ""
 "It is recommended to always define a `group.id`, the automatic generation is only a convenient feature for development.\n"
 "\n"
 "Type: _string_"
-msgstr ""
+msgstr "アプリケーションが所属するコンシューマーグループを識別するための一意の文字列。"
 
 #. type: Table
 #: upstream/_guides/kafka.adoc:928
