--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -695,8 +695,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:435
+#, fuzzy
 msgid "Ensure the following dependency is present in your `pom.xml` file if you require the Microprofile Metrics API:"
-msgstr ""
+msgstr "Microprofile Metrics APIを必要とする場合は、 `pom.xml` ファイルに以下の依存関係があることを確認してください。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:442
