--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -1132,24 +1132,27 @@ msgstr "`java.util.concurrent.CompletionStage` および `io.smallrye.mutiny.Uni
 
 #. type: Title ====
 #: upstream/_guides/qute-reference.adoc:476
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Missing Properties"
-msgstr ""
+msgstr "不足しているプロパティ"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:482
+#, fuzzy
 msgid "It can happen that an expression may not be evaluated at runtime.  For example, if there is an expression `{person.age}` and there is no property `age` declared on the `Person` class.  Qute outputs the special constant `NOT_FOUND` in this case by default.  However, it's possible to change the default strategy via the `quarkus.qute.property-not-found-strategy` as described in the <<configuration-reference>>."
-msgstr ""
+msgstr "式が実行時に評価されないことがあります。たとえば、 `{person.age}` という式があり、 `Person` クラスに `age` というプロパティが宣言されていない場合です。Qute はこの場合、デフォルトで特殊定数 `NOT_FOUND` を出力します。ただし、 link:#configuration-reference[[configuration-reference]]で説明されているように、 `quarkus.qute.property-not-found-strategy` を介してデフォルトの戦略を変更することが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:484
+#, fuzzy
 msgid "Similar errors are detected at build time if <<typesafe_expressions>> and <<typesafe_templates>> are used."
-msgstr ""
+msgstr "link:#typesafe_expressions[typesafe_expressions]]や link:#typesafe_templates[[typesafe_templates]]を使用すると、ビルド時に同様のエラーが検出されます。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:486
+#, fuzzy
 msgid "Alternatively, the _elvis operator_ can be used to output the default value in case the property cannot be resolved or resolves to `null`: `{person.age ?: 10}` would output `10`. And for the loop section, the `orEmpty` resolver can be used. See also <<built-in-resolvers>>."
-msgstr ""
+msgstr "また、 _elvis 演算_子を使用すると、プロパティが解決できない場合や `null` に解決される場合に、デフォルト値を出力することができます。 `{person.age ?: 10}` は `10` を出力します。また、ループセクションでは、 `orEmpty` リゾルバを使用することができます。 link:#built-in-resolvers[built-in-resolver]]も参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:491
