--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -81,8 +81,9 @@ msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus2/
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:34
+#, fuzzy
 msgid "The `client_credentials` grant allows to set extra parameters to the token request via `quarkus.oidc-client.grant-options.client.<param-name>=<value>`. Here is how to set the intended token recipient via the `audience` parameter:"
-msgstr ""
+msgstr "`client_credentials` グラントでは、 `quarkus.oidc-client.grant-options.client.&amp;lt;param-name&amp;gt;=&amp;lt;value&amp;gt;` を通じて、トークンのリクエストに追加のパラメーターを設定することができます。ここでは、 `audience` のパラメータを使って、意図したトークンの受信者を設定する方法を紹介します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:38
