--- a/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
@@ -21,57 +21,63 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/dev-mode-differences.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus - How dev-mode differs from a production application"
-msgstr ""
+msgstr "Quarkus - 開発モードと本番アプリケーションとの違い"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:11
+#, fuzzy
 msgid "This document explains how the dev-mode in Quarkus differs from a production application."
-msgstr ""
+msgstr "このドキュメントでは、Quarkusのdev-modeが本番アプリケーションとどのように異なるかを説明します。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:12
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Intro"
-msgstr ""
+msgstr "イントロ"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:16
+#, fuzzy
 msgid "Quarkus provides a dev-mode (explained in more detail link:maven-tooling.adoc#dev-mode[here] and link:gradle-tooling.adoc#dev-mode[here]) which greatly aids during development but should *NEVER* be used in production."
-msgstr ""
+msgstr "Quarkusには開発モード（詳細は link:maven-tooling.adoc#dev-mode[こちら]と link:gradle-tooling.adoc#dev-mode[こちら]）があり、開発に大いに役立ちます。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Architectural differences"
-msgstr ""
+msgstr "アーキテクチャの違い"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:21
+#, fuzzy
 msgid "Feature sets aside, the Quarkus application that is run under dev-mode differs architecturally from the production application (i.e. the one that is run using `java -jar ...`)."
-msgstr ""
+msgstr "機能セットはさておき、dev-modeで実行されるQuarkusアプリケーションは、プロダクションアプリケーション（すなわち、 `java -jar …​` を使用して実行されるもの）とはアーキテクチャ的に異なります。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:24
+#, fuzzy
 msgid "In dev-mode, Quarkus uses a ClassLoader hierarchy (explained in detail link:class-loading-reference.adoc[here]) that enables the live reload of user code without requiring a rebuild and restart of the application."
-msgstr ""
+msgstr "開発モードでは、QuarkusはClassLoader階層（詳細は link:class-loading-reference.adoc[こちら]）を使用し、アプリケーションの再構築や再起動を必要とせずにユーザーコードのライブリロードを可能にしています。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:26
+#, fuzzy
 msgid "In a production application, the aforementioned class loading infrastructure is entirely absent - there is a single, purpose built ClassLoader that loads (almost) all classes and dependencies."
-msgstr ""
+msgstr "本番アプリケーションでは、前述のクラスローディングのインフラは全く存在しません。目的に応じて構築された単一のClassLoaderがあり、（ほぼ）すべてのクラスと依存関係をロードします。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:27
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev-mode features"
-msgstr ""
+msgstr "開発モードの機能"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:30
+#, fuzzy
 msgid "In keeping with the mantra of providing developer joy, Quarkus provides a host of features when dev-mode is enabled. The most important features are:"
-msgstr ""
+msgstr "開発者の喜びを提供するという信条のもと、Quarkusはdev-modeを有効にすると多くの機能を提供します。最も重要な機能は以下の通りです。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:31
@@ -81,8 +87,9 @@ msgstr "ライブ・リロード"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:34
+#, fuzzy
 msgid "This mightily important feature needs no introduction and has already been mentioned in the <<architectural-differences, architectural differences>> section."
-msgstr ""
+msgstr "この非常に重要な機能については紹介するまでもなく、 link:#architectural-differences[アーキテクチャの違い]の項ですでに触れています。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:35
@@ -92,66 +99,75 @@ msgstr "Dev UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:40
+#, fuzzy
 msgid "Quarkus provides a very useful link:dev-ui.adoc[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
-msgstr ""
+msgstr "Quarkusは、ブラウザからアクセスできる非常に便利な link:dev-ui.adoc[UI]を提供しています。 `/q/dev` 。このUIにより、開発者はアプリケーションの状態を確認できるだけでなく、（存在する拡張機能に応じて）その状態を変更できる様々な操作にアクセスできます。そのような操作の例は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:42
+#, fuzzy
 msgid "Changing configuration values"
-msgstr ""
+msgstr "設定値の変更"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:43
+#, fuzzy
 msgid "Running Database migration scripts"
-msgstr ""
+msgstr "データベース移行スクリプトの実行"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:44
+#, fuzzy
 msgid "Clearing of caches"
-msgstr ""
+msgstr "キャッシュの消去"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:45
+#, fuzzy
 msgid "Running scheduled operations"
-msgstr ""
+msgstr "スケジュールされたオペレーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:46
+#, fuzzy
 msgid "Building a container"
-msgstr ""
+msgstr "コンテナの構築"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Error pages"
-msgstr ""
+msgstr "エラーページ"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:50
+#, fuzzy
 msgid "In an effort to make development errors very easy to diagnose, Quarkus provides various detailed error pages when running in dev-mode."
-msgstr ""
+msgstr "開発エラーの診断を非常に簡単にするために、Quarkusは開発モードでの実行時に様々な詳細なエラーページを提供しています。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:51
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Database import scripts"
-msgstr ""
+msgstr "データベースインポートスクリプト"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:54
+#, fuzzy
 msgid "The `quarkus-hibernate-orm` extension will run the `import.sql` script in `src/main/resources` when Quarkus is running in dev-mode. More details can be found link:hibernate-orm.adoc#dev-mode[here]."
-msgstr ""
+msgstr "`quarkus-hibernate-orm` エクステンションは、Quarkusがdev-modeで動作しているときに、 `import.sql` スクリプトを `src/main/resources` で実行します。詳細は link:hibernate-orm.adoc#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:55
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev Services"
-msgstr ""
+msgstr "開発サービス"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:59
+#, fuzzy
 msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices.  More information can be found link:datasource.adoc#dev-services[here]."
-msgstr ""
+msgstr "Quarkusでは、テストや開発モードで実行する際に、ゼロコンフィグのデータベースをすぐに提供することができますが、これはDevServicesと呼ばれる機能です。詳細については link:datasource.adoc#dev-services[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:60
@@ -161,103 +177,114 @@ msgstr "Swagger UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:63
+#, fuzzy
 msgid "The `quarkus-smallrye-openapi` extension will expose the Swagger UI when Quarkus is running in dev-mode. Additional information can be found link:openapi-swaggerui.adoc#dev-mode[here]."
-msgstr ""
+msgstr "`quarkus-smallrye-openapi` エクステンションは、Quarkusがdev-modeで動作しているときに、Swagger UIを公開します。追加情報は link:openapi-swaggerui.adoc#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:64
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "GraphQL UI"
-msgstr ""
+msgstr "GraphQL UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:67
+#, fuzzy
 msgid "The `quarkus-smallrye-graphql` extension will expose the GraphiQL UI when Quarkus is running in dev-mode. More details can be found link:smallrye-graphql.adoc#ui[here]."
-msgstr ""
+msgstr "`quarkus-smallrye-graphql` エクステンションは、Quarkusがdev-modeで動作しているときにGraphiQL UIを公開します。詳細は link:smallrye-graphql.adoc#ui[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:68
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Health UI"
-msgstr ""
+msgstr "ヘルスUI"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:71
+#, fuzzy
 msgid "The `quarkus-smallrye-health` extension will expose the Health UI when Quarkus is running in dev-mode. link:smallrye-health.adoc#ui[This] section provides additional information."
-msgstr ""
+msgstr "`quarkus-smallrye-health` エクステンションは、Quarkusがdev-modeで動作しているときにHealth UIを公開します。 link:smallrye-health.adoc#ui[この]セクションでは、追加情報を提供します。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:72
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Mock mailer"
-msgstr ""
+msgstr "モックメーラー"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:75
+#, fuzzy
 msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer.adoc#testing[this] for more details."
-msgstr ""
+msgstr "`quarkus-mailer` エクステンションは、Quarkusがdev-modeで動作しているときに、インメモリのモックメールサーバを有効にします。詳しくは link:mailer.adoc#testing[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gRPC"
-msgstr ""
+msgstr "gRPC"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:80
+#, fuzzy
 msgid "The gRPC Reflection Service is enabled in dev mode by default. That lets you use tools such as `grpcurl`. In production mode, the reflection service is disabled. You can enable it explicitly using `quarkus.grpc-server.enable-reflection-service=true`."
-msgstr ""
+msgstr "gRPC Reflection Serviceは、devモードではデフォルトで有効になっています。これにより、 `grpcurl` のようなツールを使用することができます。本番モードでは、リフレクションサービスは無効になっています。 `quarkus.grpc-server.enable-reflection-service=true` を使って明示的に有効にすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:82
+#, fuzzy
 msgid "In dev-mode, `quarkus.grpc.server.instances` has no effect."
-msgstr ""
+msgstr "dev-modeでは、 `quarkus.grpc.server.instances` は何の効果もありません。"
 
 #. type: Title ===
 #: upstream/_guides/dev-mode-differences.adoc:83
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Others"
-msgstr ""
+msgstr "その他"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:86
+#, fuzzy
 msgid "There might be other configuration properties (depending on the extensions added to the application) that have no effect in dev-mode."
-msgstr ""
+msgstr "他の設定プロパティ（アプリケーションに追加された拡張機能に応じて）があるかもしれませんが、dev-modeでは影響がありません。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:88
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Performance implications"
-msgstr ""
+msgstr "パフォーマンスへの影響"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:93
+#, fuzzy
 msgid "In dev-mode minimizing the runtime footprint of the application is not the primary objective (although Quarkus still starts plenty fast and consumes little memory even in dev-mode) - the primary objective is enabling developer joy.  Therefore, many more classes are loaded and build time operations also take place every time a live-reload is performed."
-msgstr ""
+msgstr "開発モードでは、アプリケーションのランタイムフットプリントを最小化することは主な目的ではありません（ただし、Quarkusは開発モードでも高速に起動し、メモリをほとんど消費しません） - 主な目的は、開発者の喜びを実現することです。そのため、ライブリロードが実行されるたびに、より多くのクラスがロードされ、ビルド時の操作も行われます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:98
+#, fuzzy
 msgid "In contrast, in a production application the main objective for Quarkus is to consume the least amount of memory and startup in the smallest amount of time.  Thus, when running the production application, build time operations are not performed (by definition) and various infrastructure classes needed at build time are not present at all at runtime.  Furthermore, the purpose built ClassLoader that comes with the link:maven-tooling.adoc#fast-jar[fast-jar] package type ensures that class lookup is done as fast as possible while also keeping the minimum amount of jars in memory."
-msgstr ""
+msgstr "対照的に、プロダクションアプリケーションでは、Quarkusの主な目的は、最小限のメモリを消費し、最小限の時間で起動することです。したがって、本番アプリケーションを実行する際には、ビルド時の操作は（定義上）実行されず、ビルド時に必要なさまざまなインフラストラクチャクラスは、実行時にはまったく存在しません。さらに、 link:maven-tooling.adoc#fast-jar[fast-jar]パッケージタイプに付属する目的に応じて構築されたClassLoaderにより、クラスの検索が可能な限り高速に行われると同時に、メモリ内のjarの量も最小限に抑えられます。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:99
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Security implications"
-msgstr ""
+msgstr "セキュリティへの影響"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:103
+#, fuzzy
 msgid "Perhaps the most important reason why dev-mode applications should not be run in production is that the dev-mode allows reading information that could be confidential (via the Dev-UI)  while also giving access to operations that could be destructive (either by exposing endpoints that should not be available in production application or via the Dev-UI)."
-msgstr ""
+msgstr "dev-modeアプリケーションを本番環境で実行してはいけない最も重要な理由は、dev-modeでは（Dev-UIを介して）機密性のある情報を読み取ることができる一方で、（本番環境のアプリケーションでは利用できないはずのエンドポイントを公開したり、Dev-UIを介して）破壊的な操作にアクセスすることができるからです。"
 
 #. type: Title ==
 #: upstream/_guides/dev-mode-differences.adoc:104
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Native binary"
-msgstr ""
+msgstr "ネイティブバイナリ"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:106
+#, fuzzy
 msgid "When a native binary is created (explained in detail link:building-native-image[here]), it is *always* built from a production application."
-msgstr ""
+msgstr "ネイティブ・バイナリを作成する場合（詳細は link:building-native-image[こちら]）、 *常に*本番アプリケーションからビルドされます。"
