--- a/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
@@ -1534,14 +1534,15 @@ msgstr "エラーコード"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:852
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Additional Notes"
-msgstr ""
+msgstr "その他の注意事項"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:858
+#, fuzzy
 msgid "If you are using the `smallrye-graphql` extension and the `micrometer` metrics extension is present and metrics are enabled, you may encounter a `java.lang.NoClassDefFoundError` as some versions of the `smallrye-graphql` extension have runtime requirements on the Microprofile Metrics API.  Add the following Microprofile Metrics API dependency to resolve the issue:"
-msgstr ""
+msgstr "`smallrye-graphql` エクステンションを使用していて、 `micrometer` メトリクスエクステンションが存在し、メトリクスが有効になっている場合、 `smallrye-graphql` エクステンションの一部のバージョンには Microprofile Metrics API のランタイム要件があるため、 `java.lang.NoClassDefFoundError` が発生する可能性があります。この問題を解決するには、次の Microprofile Metrics API の依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:865
