--- a/l10n/po/ja_JP/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 20:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-08 20:36+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.1.Final released - Bugfixes'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.1.Finalリリース - Bugfix'\n"
+"title: 'Quarkus 1.13.1.Finalリリース - バグフィックス'\n"
 "date: 2021-04-07\n"
 "tags: release\n"
 "synopsis: 1.13.1.Finalでは、問題の修正とドキュメントの改善が行われています。\n"
@@ -44,27 +44,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:11
-#, fuzzy
 msgid "It has been a week since the release of `1.13.0.Final` so it is time for our traditional `.1` release."
 msgstr "`1.13.0.Final` のリリースから1週間が経ちましたので、恒例の `.1` のリリースの時間です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:13
-#, fuzzy
 msgid "1.13.1.Final is a maintenance release fixing bugs and improving the documentation."
 msgstr "1.13.1.Finalは、バグの修正とドキュメントの改善を行ったメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:15
-#, fuzzy
 msgid "1.13.1.Final is a safe upgrade for everyone using Quarkus 1.13."
 msgstr "1.13.1.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:17
-#, fuzzy
 msgid "If you are not using 1.13 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13 migration guide]."
-msgstr "すでに1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
+msgstr "まだ1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:18
@@ -74,19 +70,17 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Instrumentation-based live reload disabled by default"
-msgstr "インスツルメンテーションベースのライブリロードがデフォルトで無効"
+msgstr "インスツルメンテーションベースのライブリロードがデフォルトで無効化"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:23
-#, fuzzy
 msgid "We have made several iterations of our instrumentation-based live reload (meaning we don't restart Quarkus but just perform class redefinition when we can) since its first introduction."
-msgstr "インストゥルメンテーションベースのライブリロード（Quarkusを再起動せず、可能な限りクラスの再定義を行うこと）を最初に導入して以来、何度も繰り返しています。"
+msgstr "インストゥルメンテーションベースのライブリロード（可能な場合にQuarkusを再起動せず、クラスの再定義を行うこと）を最初に導入して以来、何度もイテレーションを繰り返しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:27
-#, fuzzy
 msgid "It has matured a lot but we decided it was too much of a change compared to our initial promise of \"you refresh, everything is fully restarted\".  So, in 1.13.1.Final, we disabled it by default.  If your live reloads are taking too long or if you want to keep the application state as much as possible, you can enable it by adding `quarkus.live-reload.instrumentation=true` in your `application.properties`."
 msgstr "この機能は非常に成熟していますが、「リフレッシュするとすべてが完全に再起動される」という当初の約束と比べると、あまりにも変化が大きすぎると判断しました。そこで、1.13.1.Finalでは、この機能をデフォルトで無効にしました。ライブリロードに時間がかかりすぎる場合や、アプリケーションの状態をできるだけ維持したい場合には、 `application.properties` に `quarkus.live-reload.instrumentation=true` を追加することで有効にすることができます。"
 
@@ -98,9 +92,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:31
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.1.Final[the full changelog of 1.13.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.1.Final[1.13.1.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.1.Final[1.13.1.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc:32
