Add some translations

--- a/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
@@ -191,7 +191,7 @@ msgstr "ベースランタイム ClassLoader"
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:91
 msgid "This loads all the runtime extension dependencies, as well as other user dependencies (note that this may include duplicate copies of classes also loaded by the Augment ClassLoader). It does not load the application root or any hot deployed code. This ClassLoader is persistent, even if the application restarts it will remain (which is why it cannot load application classes that may be hot deployed). Its parent is the base ClassLoader."
-msgstr "これは、他のユーザー依存関係と同様に、すべてのランタイムエクステンション依存関係をロードします(これには 拡張 ClassLoader によってロードされたクラスの重複コピーも含まれる可能性があることに注意してください)。アプリケーションのルートやホットデプロイされたコードはロードされません。この ClassLoader は永続的なもので、アプリケーションが再起動しても残ります (ホットデプロイされている可能性のあるアプリケーションクラスをロードできないのはそのためです)。親はベース ClassLoader です。"
+msgstr "これは、他のユーザー依存関係と同様に、すべての実行時エクステンション依存関係をロードします(これには 拡張 ClassLoader によってロードされたクラスの重複コピーも含まれる可能性があることに注意してください)。アプリケーションのルートやホットデプロイされたコードはロードされません。この ClassLoader は永続的なもので、アプリケーションが再起動しても残ります (ホットデプロイされている可能性のあるアプリケーションクラスをロードできないのはそのためです)。親はベース ClassLoader です。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:98
