--- a/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
@@ -257,7 +257,7 @@ msgstr "パフォーマンスへの影響"
 #: upstream/_guides/dev-mode-differences.adoc:93
 #, fuzzy
 msgid "In dev-mode minimizing the runtime footprint of the application is not the primary objective (although Quarkus still starts plenty fast and consumes little memory even in dev-mode) - the primary objective is enabling developer joy.  Therefore, many more classes are loaded and build time operations also take place every time a live-reload is performed."
-msgstr "開発モードでは、アプリケーションのランタイムフットプリントを最小化することは主な目的ではありません（ただし、Quarkusは開発モードでも高速に起動し、メモリをほとんど消費しません） - 主な目的は、開発者の喜びを実現することです。そのため、ライブリロードが実行されるたびに、より多くのクラスがロードされ、ビルド時の操作も行われます。"
+msgstr "開発モードでは、アプリケーションの実行時フットプリントを最小化することは主な目的ではありません（ただし、Quarkusは開発モードでも高速に起動し、メモリをほとんど消費しません） - 主な目的は、開発者の喜びを実現することです。そのため、ライブリロードが実行されるたびに、より多くのクラスがロードされ、ビルド時の操作も行われます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:98
