--- a/l10n/po/ja_JP/_guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_guides/logging.adoc.po
@@ -394,12 +394,12 @@ msgstr "イベント `TRACE` よりも多くのデバッグ情報、さらに高
 #: upstream/_guides/logging.adoc:123
 #, no-wrap
 msgid "Runtime configuration"
-msgstr "ランタイム設定"
+msgstr "実行時設定"
 
 #. type: Plain text
 #: upstream/_guides/logging.adoc:127
 msgid "Run time logging is configured in the `application.properties` file, for example, to set the default log level to `INFO` logging and include Hibernate `DEBUG` logs:"
-msgstr "ランタイムロギングは `application.properties` ファイルで設定します。例えばデフォルトのログレベルを `INFO` ロギングに設定し、Hibernate の `DEBUG` ログを含めるようにします。"
+msgstr "実行時ロギングは `application.properties` ファイルで設定します。例えばデフォルトのログレベルを `INFO` ロギングに設定し、Hibernate の `DEBUG` ログを含めるようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/logging.adoc:132
