--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -837,7 +837,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:464
 msgid "This is a build time property, it cannot be changed at runtime after your application is built."
-msgstr "これはビルドタイムプロパティーで、アプリケーションがビルドされた後、ランタイムに変更することはできません。"
+msgstr "これはビルド時プロパティーで、アプリケーションがビルドされた後、ランタイムに変更することはできません。"
 
 #. type: delimited block =
 #: upstream/_guides/openapi-swaggerui.adoc:468
