--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -3434,7 +3434,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive.adoc:1807
 #, fuzzy, no-wrap
 msgid "Include/Exclude JAX-RS classes with build time conditions"
-msgstr "ビルドタイム条件でJAX-RSクラスを含める/除外する"
+msgstr "ビルド時条件でJAX-RSクラスを含める/除外する"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:1811
