--- a/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
@@ -1243,7 +1243,7 @@ msgstr "現在サポートされていないもの"
 #: upstream/_guides/spring-data-jpa.adoc:604
 #, fuzzy
 msgid "Methods of the `org.springframework.data.repository.query.QueryByExampleExecutor` interface - if any of these are invoked, a Runtime exception will be thrown."
-msgstr "`org.springframework.data.repository.query.QueryByExampleExecutor` インターフェイスのメソッド - これらのいずれかが呼び出されると、ランタイム例外がスローされます。"
+msgstr "`org.springframework.data.repository.query.QueryByExampleExecutor` インターフェイスのメソッド - これらのいずれかが呼び出されると、実行時例外がスローされます。"
 
 #. type: Plain text
 #: upstream/_guides/spring-data-jpa.adoc:605
