Translate sending-emails.adoc.po

--- a/l10n/po/ja_JP/_guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_guides/sending-emails.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-24 14:06+0000\n"
-"PO-Revision-Date: 2021-04-08 21:28+0900\n"
+"PO-Revision-Date: 2021-04-08 22:32+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -241,7 +241,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:118
-#, fuzzy
 msgid "With such a JAX-RS resource, you can check that everything is working with:"
 msgstr "このようなJAX-RSリソースがあれば、すべてが動作していることを確認することができます。"
 
@@ -255,7 +254,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:128
-#, fuzzy
 msgid "You can create new `io.quarkus.mailer.Mail` instances from the constructor or from the `Mail.withText` and `Mail.withHtml` helper methods. The `Mail` instance lets you add recipients (to, cc, or bcc), set the subject, headers, sender (from) address..."
 msgstr "コンストラクタ、または `Mail.withText` と `Mail.withHtml` ヘルパーメソッドから、新しい `io.quarkus.mailer.Mail` インスタンスを作成できます。 `Mail` インスタンスでは、受信者 (to, cc, bcc) の追加、件名、ヘッダ、送信者 (from) アドレスの設定などを行うことができます。"
 
@@ -309,9 +307,8 @@ msgstr "インラインの添付ファイル付きのHTMLメールの送信"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:159
-#, fuzzy
 msgid "When sending HTML email, you can add inlined attachments.  For example, you can send an image with your email, and this image will be displayed in the mail content. If you put the image file into resources folder, you should specify the full path to the file. \"e.g.\" \"META-INF/resources/quarkus-logo.png\" otherwise quarkus will lookup in the root folder of the project"
-msgstr "HTMLメールを送信する際に、インラインの添付ファイルを追加することができます。例えば、メールに画像を添付して送信すると、この画像がメールの内容に表示されます。画像ファイルをリソースフォルダーに入れる場合は、ファイルのフルパスを指定する必要があります。\"例\"\"META-INF/resources/quarkus-logo.png\" でない場合、quarkusはプロジェクトのルートフォルダーを検索します。"
+msgstr "HTMLメールを送信する際に、インラインの添付ファイルを追加することができます。例えば、メールに画像を添付して送信すると、この画像がメールの内容に表示されます。画像ファイルをリソースフォルダーに入れる場合は、ファイルのフルパスを指定する必要があります。\"例\" \"META-INF/resources/quarkus-logo.png\" 層ではない場合は、quarkusはプロジェクトのルートフォルダーを検索します。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:174
@@ -333,9 +330,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:180
-#, fuzzy
 msgid "Note the _content-id_ format and reference.  By spec, when you create the inline attachment, the content-id must be structured as follows: `<id@domain>`.  If you don't wrap your content-id between `<>`, it is automatically wrapped for you.  When you want to reference your attachment, for instance in the `src` attribute, use `cid:id@domain` (without the `<` and `>`)."
-msgstr "content _-id の_ 形式と参照に注意してください。仕様上、インライン添付ファイルを作成する際には、content-idは以下のように構成する必要があります。 `<id@domain>` . `<>` の間に content-id を挟まない場合は、自動的にラップされます。添付ファイルを参照したい場合、例えば `src` 属性で参照したい場合は `cid:id@domain` を使用してください( `<` と `>` は使用しないでください)。"
+msgstr "_content-id の_ 形式と参照に注意してください。仕様上、インライン添付ファイルを作成する際には、content-idは以下のように構成する必要があります。 `<id@domain>` . `<>` の間に content-id を挟まない場合は、自動的にラップされます。添付ファイルを参照したい場合、例えば `src` 属性で参照したい場合は `cid:id@domain` を使用してください( `<` と `>` は使用しないでください)。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:181
@@ -479,13 +475,12 @@ msgstr "ネイティブ実行ファイルでSSLを使用する場合"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:260
-#, fuzzy
 msgid "Note that if you enable SSL for the mailer and you want to build a native executable, you will need to enable the SSL support.  Please refer to the native-and-ssl-guide.html[Using SSL With Native Executables] guide for more information."
-msgstr "メーラーのSSLを有効にして、ネイティブ実行ファイルを構築する場合は、SSL対応を有効にする必要がありますのでご注意ください。詳しくは、native-and-ssl-guide.html[Using SSL With Native Executables]ガイドを参照してください。"
+msgstr "メーラーのSSLを有効にして、ネイティブ実行ファイルをビルドしたい場合は、SSLサポートを有効にする必要がありますのでご注意ください。詳しくは、native-and-ssl-guide.html[Using SSL With Native Executables]ガイドを参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:261
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the underlying Vert.x Mail Client"
 msgstr "基盤となる Vert.x メールクライアントの使用"
 
@@ -522,13 +517,11 @@ msgstr "ベアクライアント ( `io.vertx.ext.mail.MailClient` )"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:278
-#, fuzzy
 msgid "Check the link:using-vertx.html[Using Vert.x guide] for further details about these different APIs and how to select the most suitable for you."
-msgstr "これらの異なる API の詳細と、あなたに最も適した API を選択する方法については、 link:using-vertx.html[Using Vert.x ガイドを] 確認してください。"
+msgstr "これらの異なる API の詳細と、あなたに最も適した API を選択する方法については、 link:using-vertx.html[Using Vert.x ガイド] を確認してください。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:281
-#, fuzzy
 msgid "The retrieved `MailClient` is configured using the configuration key presented above.  You can also create your own instance, and pass your own configuration."
 msgstr "取得した `MailClient` は、上記で提示した設定キーを使用して設定します。また、独自のインスタンスを作成し、独自の設定を渡すこともできます。"
 
@@ -540,9 +533,8 @@ msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:286
-#, fuzzy
 msgid "This guide has shown how you can send emails from a Quarkus application.  The _mailer_ extension works in JVM and native mode."
-msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _メーラー_ エクステンションは、JVMとネイティブモードで動作します。"
+msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _mailer_ エクステンションは、JVMとネイティブモードで動作します。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:289
