Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mailer.adoc.po
@@ -141,7 +141,7 @@ msgstr "メーラーの設定"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:64
 msgid "The Quarkus mailer is using SMTP. In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables."
-msgstr ""
+msgstr "QuarkusのメーラーはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできることを覚えておいてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:66
@@ -202,7 +202,7 @@ msgstr "簡単なメールの送信"
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/mailer.adoc:104
 msgid "In a JAX-RS resource, or in a bean, you can inject the mailer as follows:"
-msgstr ""
+msgstr "JAX-RSリソース内、またはBean内では、以下のようにmailerを注入することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:109
@@ -228,7 +228,7 @@ msgstr "APIは2つあります。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:117
 msgid "`io.quarkus.mailer.Mailer` provides the imperative (blocking and synchronous) API;"
-msgstr ""
+msgstr "`io.quarkus.mailer.Mailer` は、命令型 (ブロッキングと同期)APIを提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:118
@@ -238,7 +238,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:120
 msgid "The two APIs are equivalent feature-wise. Actually the `Mailer` implementation is built on top of the `ReactiveMailer` implementation."
-msgstr ""
+msgstr "2つのAPIは機能的には同等です。実際には `Mailer` の実装は `ReactiveMailer` の実装の上に構築されています。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/mailer.adoc:122
@@ -265,7 +265,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:134
 msgid "To send a simple email, proceed as follows:"
-msgstr ""
+msgstr "簡単なメールを送信するには、以下のように進めます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:141
@@ -280,7 +280,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:144
 msgid "For example, you can use the `Mailer` in a JAX-RS endpoint as follows:"
-msgstr ""
+msgstr "例えば、JAX-RS のエンドポイントでは `Mailer` を以下のように使用できます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:153
@@ -334,7 +334,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:182
 msgid "You can also send several `Mail` objects in one call:"
-msgstr ""
+msgstr "一度の呼び出しで複数の `Mail` オブジェクトを送信することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:186
@@ -351,7 +351,7 @@ msgstr "添付ファイルの送信"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:191
 msgid "To send attachment, just use the `addAttachment` methods on the `io.quarkus.mailer.Mail` instance:"
-msgstr ""
+msgstr "添付ファイルを送信するには、 `io.quarkus.mailer.Mail` インスタンスの `addAttachment` メソッドを使用するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:203
@@ -527,12 +527,12 @@ msgstr "メール送信のテスト"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:299
 msgid "Because it is very inconvenient to send emails during development and testing, you can set the `quarkus.mailer.mock` boolean configuration to `true` to not actually send emails but print them on stdout and collect them in a `MockMailbox` bean instead.  This is the default if you are running Quarkus in `DEV` or `TEST` mode."
-msgstr ""
+msgstr "開発中やテスト中にメールを送信するのは非常に不便なので、 `quarkus.mailer.mock` のブール設定を `true` に設定して、実際にはメールを送信せずに標準出力に印刷して、代わりに `MockMailbox` Beanに収集することができます。これは、 `DEV` または `TEST` モードでQuarkusを実行している場合のデフォルトです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mailer.adoc:301
 msgid "You can then write tests to verify that your emails were sent, for example, by a REST endpoint:"
-msgstr ""
+msgstr "そして、テストを書いて、例えばRESTエンドポイントでメールが送信されたかどうかを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:306
