--- a/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
@@ -123,7 +123,7 @@ msgstr "メーラーの設定"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:51
 msgid "The Quarkus mailer is using SMTP. In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables."
-msgstr ""
+msgstr "QuarkusのメーラーはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできることを覚えておいてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:53
@@ -156,7 +156,7 @@ msgstr "簡単なメールの送信"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:70
 msgid "In a JAX-RS resource, or in a bean, you can inject the mailer as follows:"
-msgstr ""
+msgstr "JAX-RSリソース内、またはBean内では、以下のようにmailerを注入することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:75
@@ -182,22 +182,22 @@ msgstr "APIは2つあります。"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:83
 msgid "`io.quarkus.mailer.Mailer` provides the imperative (blocking and synchronous) API;"
-msgstr ""
+msgstr "`io.quarkus.mailer.Mailer` は、命令型 (ブロッキングと同期)APIを提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:84
 msgid "`io.quarkus.mailer.ReactiveMailer` provides the reactive (non-blocking and asynchronous) API"
-msgstr ""
+msgstr "`io.quarkus.mailer.ReactiveMailer` はリアクティブ型 (ノンブロッキングで非同期の) API を提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:86
 msgid "The two APIs are equivalent feature-wise. Actually the `Mailer` implementation is built on top of the `ReactiveMailer` implementation."
-msgstr ""
+msgstr "2つのAPIは機能的には同等です。実際には `Mailer` の実装は `ReactiveMailer` の実装の上に構築されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:88
 msgid "To send a simple email, proceed as follows:"
-msgstr ""
+msgstr "簡単なメールを送信するには、以下のように進めます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:95
@@ -212,7 +212,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:98
 msgid "For example, you can use the `Mailer` in a JAX-RS endpoint as follows:"
-msgstr ""
+msgstr "例えば、JAX-RS のエンドポイントでは `Mailer` を以下のように使用できます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:107
@@ -260,7 +260,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:130
 msgid "You can also send several `Mail` objects in one call:"
-msgstr ""
+msgstr "一度の呼び出しで複数の `Mail` オブジェクトを送信することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:134
@@ -277,7 +277,7 @@ msgstr "添付ファイルの送信"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:139
 msgid "To send attachment, just use the `addAttachment` methods on the `io.quarkus.mailer.Mail` instance:"
-msgstr ""
+msgstr "添付ファイルを送信するには、 `io.quarkus.mailer.Mail` インスタンスの `addAttachment` メソッドを使用するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:151
@@ -342,12 +342,12 @@ msgstr "メール送信のテスト"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:186
 msgid "Because it is very inconvenient to send emails during development and testing, you can set the `quarkus.mailer.mock` boolean configuration to `true` to not actually send emails but print them on stdout and collect them in a `MockMailbox` bean instead.  This is the default if you are running Quarkus in `DEV` or `TEST` mode."
-msgstr ""
+msgstr "開発中やテスト中にメールを送信するのは非常に不便なので、 `quarkus.mailer.mock` のブール設定を `true` に設定して、実際にはメールを送信せずに標準出力に印刷して、代わりに `MockMailbox` Beanに収集することができます。これは、 `DEV` または `TEST` モードでQuarkusを実行している場合のデフォルトです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:188
 msgid "You can then write tests to verify that your emails were sent, for example, by a REST endpoint:"
-msgstr ""
+msgstr "そして、テストを書いて、例えばRESTエンドポイントでメールが送信されたかどうかを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:193
