Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
@@ -37,8 +37,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:18
+#, fuzzy
 msgid "The KMS extension is based on https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the 1.x code base that offers two programming models (Blocking & Async)."
-msgstr ""
+msgstr "SESのエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x] をベースにしており、2つのプログラミングモデル(Blocking & Async)を提供し、1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:22
@@ -374,7 +375,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:183
 msgid "And add the following dependency to the application `pom.xml`:"
-msgstr ""
+msgstr "そして、以下の依存関係をアプリケーションの `pom.xml` に追加します"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:189
@@ -430,7 +431,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:213
 msgid "And the region from your AWS CLI profile will be used."
-msgstr ""
+msgstr "そして、AWS CLIプロファイルからのリージョンが使用されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:214
@@ -545,7 +546,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:282
 msgid "And we need to add the Netty HTTP client dependency to the `pom.xml`:"
-msgstr ""
+msgstr "そして、Netty HTTPクライアント依存関係を `pom.xml` に追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:289
