--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-sqs.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-sqs.adoc.po
@@ -566,7 +566,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:290
 msgid "And add the following dependency to the application `pom.xml`:"
-msgstr ""
+msgstr "そして、以下の依存関係をアプリケーションの `pom.xml` に追加します"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:296
@@ -622,7 +622,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:320
 msgid "And the region from your AWS CLI profile will be used."
-msgstr ""
+msgstr "そして、AWS CLIプロファイルからのリージョンが使用されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:321
@@ -728,8 +728,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:386
+#, fuzzy
 msgid "We create `Uni` instances from the `CompletionStage` objects returned by the asynchronous SQS client, and then transform the emitted item."
-msgstr ""
+msgstr "非同期SESクライアントから返された `CompletionStage` オブジェクトから `Uni` インスタンスを作成し、生成されたアイテムを変換します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:388
@@ -789,7 +790,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:445
 msgid "And we need to add the Netty HTTP client dependency to the `pom.xml`:"
-msgstr ""
+msgstr "そして、Netty HTTPクライアント依存関係を `pom.xml` に追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-sqs.adoc:452
