--- a/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
@@ -902,7 +902,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:472
 msgid "Success! We now have:"
-msgstr ""
+msgstr "成功! これで、以下が得られます"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:474
