--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-sqs.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-sqs.adoc.po
@@ -567,7 +567,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:292
 msgid "And add the following dependency to the application `pom.xml`:"
-msgstr ""
+msgstr "そして、以下の依存関係をアプリケーションの `pom.xml` に追加します"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:298
@@ -623,7 +623,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:322
 msgid "And the region from your AWS CLI profile will be used."
-msgstr ""
+msgstr "そして、AWS CLIプロファイルからのリージョンが使用されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:323
@@ -729,8 +729,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:388
+#, fuzzy
 msgid "We create `Uni` instances from the `CompletionStage` objects returned by the asynchronous SQS client, and then transform the emitted item."
-msgstr ""
+msgstr "非同期SESクライアントから返された `CompletionStage` オブジェクトから `Uni` インスタンスを作成し、生成されたアイテムを変換します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:390
@@ -792,7 +793,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:449
 msgid "And we need to add the Netty HTTP client dependency to the `pom.xml`:"
-msgstr ""
+msgstr "そして、Netty HTTPクライアント依存関係を `pom.xml` に追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-sqs.adoc:456
